Wed Jul 14 16:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Fixed ([allocWithZone:]) so that
	subclasses should work correctly.

Wed Jul 14 10:32:17 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Testing/Makefile.preamble: Fix include path the headers.
	Other testing fixes

Tue Jul 13 17:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: Implemented NSStandardApplicationPaths(),
	NSStandardLibraryPaths(), and GSStandardPathPrefixes().

Mon Jul 12  5:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Bugfixes in ([stringByStandardizingPath:])
	as suggested by Pascal Bourguignon. Also fix to do substitutions
	throughout path, also use realpath() for resolving links if possible.
	* configure.in: Check for realpath()

Sat Jul 10 13:52:20 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Makefile.postamble: Create Foundation link in Source directory
	* Source/Makefile.postamble: Remove link to Foundation
	(work around bug in make?)

Thu Jul  8 22:21:54 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Changes for new directory layout.
	* Makefile.postamble: Link Foundation from gnustep/base
	* configure.in: Change location of generated include files.
	* Source/mframe/configure.in: Change mframe.h location.
	* Tools/Makefile.preamble: Change base header locations.
	* Source/Makefirl.postamble: Likewise.

Sat Jul  3 21:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCallBacks.m: Changes for garbage collection.
	* Source/NSDateFormatter.m: ditto.
	* Source/NSDictionary.m: ditto.
	* Source/NSDistributedLock.m: ditto.
	* Source/NSDistributedNotificationCenter.m: ditto.
	* Source/NSGArray.m: ditto.
	* Source/NSGCString.m: ditto.
	* Source/NSGCountedSet.m: ditto.
	* Source/NSGDictionary.m: ditto.
	* Source/NSGSet.m: ditto.
	* Source/NSHost.m: ditto.
	* Source/NSInvocation.m: ditto.
	* Source/NSNotification.m: ditto.