@@ -1,3 +1,8 @@
+Wed Jul 14 17:36:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSThread.m: Make sure that a thread retains the target object
+	and argument of the method with which it is detached.
+
 Wed Jul 14 16:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSAttributedString.m: Fixed ([allocWithZone:]) so that
